# HESXRD-Analysis-Toolkit

./: LICENSE  LICENSE.txt  README.md  README.rst  crystal.py  fileio.py  interface.py  main.py  plotting.py  pyproject.toml  script.py  util.py
HAT/: __init__.py  __main__.py  binner.py  chi2theta.py  crystal.py  fileio.py  interface.py  params.par  plotting.py  scene3d.py  script.py  transformdet.py  util.py
docs/: Makefile  index.rst  install.txt
docs/source/: conf.py  extracting.rst  index.rst  install.rst  overview.rst  paper.rst  plotting.rst  screenshots.rst  scripting.rst  tutorial.rst
